# deno-deploy-rust-template

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  cargo-generate.toml
.github/ISSUE_TEMPLATE/: pull_request_template.md
src/: index.ts  lib.rs  utils.rs
src/deno_sys/: mod.rs
tests/: e2e.ts  integration.ts  mod.rs
