[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3.58", features = ["Request", "Response", "console"] }
wasm-bindgen = "0.2"
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"
indoc = "1.0.6"
serde_json = "1.0.82"
